add bg to section hero

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,14 @@ a {
 
 .order-service {
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/bg-hero.jpg);
+  background-repeat: no-repeat;
+  max-width: 1440px;
+  margin: o auto;
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -148,7 +156,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  background-color: #2e2f42;
+  /* background-color: #2e2f42; */
 }
 
 .order-button {
