--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,9 @@ a {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  /* margin-top: 72px; */
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
   width: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
 }
@@ -289,6 +291,33 @@ a {
   letter-spacing: 0.02em;
 
   color: #434455;
+}
+
+.social-list {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: ;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
+}
+
+.social-icon {
+  fill: #f4f4fd;
 }
 
 /* section portfolio */
