--- a/css/styles.css
+++ b/css/styles.css
@@ -140,8 +140,6 @@ a {
   margin: o auto;
   padding-top: 188px;
   padding-bottom: 188px;
-  /* position: fixed;
-  top: 0; */
 }
 .hero-container {
   display: flex;
@@ -158,7 +156,6 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  /* background-color: #2e2f42; */
 }
 
 .order-button {
@@ -236,7 +233,7 @@ a {
   background-color: #f4f4fd;
   margin-bottom: 8px;
 }
-/*section our team */
+/*----------------------section our team-------------------------------- */
 
 .our-team-container {
   display: flex;
@@ -321,7 +318,9 @@ a {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
-  transition: ;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
