--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ a {
   background-color: #4d5ae5;
   cursor: pointer;
   border-width: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover,
