--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,9 @@ a {
   padding: 24px 0;
   margin-right: 76px;
 }
-
+.nav-link.current {
+  color: #404bbf;
+}
 .nav-link::after {
   content: "";
   position: absolute;
@@ -96,6 +98,7 @@ a {
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: scaleX(0);
 }
+
 .nav-link:hover::after,
 .nav-link:focus:after,
 .nav-link.current::after {
@@ -132,7 +135,7 @@ a {
 .nav-link:focus,
 .contacts-link:hover,
 .contacts-link:focus,
-.nav-link.studio-line {
+.nav-link.current {
   color: #404bbf;
 }
 
