--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ a {
 }
 
 .nav-link:hover::after,
-.nav-link:focus:after,
+.nav-link:focus::after,
 .nav-link.current::after {
   opacity: 1;
   transform: scaleX(100%);
@@ -148,7 +148,7 @@ a {
     url(../images/bg-hero.jpg);
   background-repeat: no-repeat;
   max-width: 1440px;
-  margin: o auto;
+  margin: 0 auto;
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -363,7 +363,6 @@ a {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-
   gap: 48px 24px;
 }
 .portfolio-cards {
@@ -381,6 +380,8 @@ a {
 }
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .image-thumb {
   position: relative;
@@ -394,10 +395,7 @@ a {
   height: 100%;
   padding: 40px 32px;
   transform: translateY(100%);
-  transition:
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #4d5ae5;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -406,7 +404,7 @@ a {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
-.image-thumb:hover .portfolio-overlay {
+.portfolio-list-item:hover .portfolio-overlay {
   transform: translateY(0);
 }
 .portfolio-list-item:hover {
@@ -415,6 +413,7 @@ a {
     0 1px 1px 0 rgba(46, 47, 66, 0.16),
     0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
+
 /* ----------------------------footer section ------------------------*/
 .page-footer {
   padding-top: 100px;
@@ -461,7 +460,9 @@ a {
   justify-content: flex-start;
   flex-direction: row;
   gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link-footer:hover {
+.social-link-footer:hover,
+.social-link-footer:focus {
   background-color: #31d0aa;
 }
